// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`job matrix generation should generate a job matrix consumable by gha 1`] = `
Object {
  "adapter": Array [
    Object {
      "image_name": "apy-finance-adapter:0.0.3",
      "name": "apy-finance-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "bitcoin-json-rpc-adapter:0.0.2",
      "name": "bitcoin-json-rpc-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "crypto-volatility-index-adapter:0.0.2",
      "name": "crypto-volatility-index-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "defi-pulse-adapter:0.0.4",
      "name": "defi-pulse-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "dns-record-check-adapter:0.0.2",
      "name": "dns-record-check-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "market-closure-adapter:0.0.4",
      "name": "market-closure-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "outlier-detection-adapter:0.0.2",
      "name": "outlier-detection-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "proof-of-reserves-adapter:0.0.4",
      "name": "proof-of-reserves-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "reference-transform-adapter:0.0.1",
      "name": "reference-transform-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "synth-index-adapter:0.0.2",
      "name": "synth-index-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "token-allocation-adapter:0.0.2",
      "name": "token-allocation-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "example-composite-adapter:0.0.1",
      "name": "example-composite-adapter",
      "type": "examples",
    },
    Object {
      "image_name": "example-source-adapter:0.0.4",
      "name": "example-source-adapter",
      "type": "examples",
    },
    Object {
      "image_name": "1forge-adapter:0.0.4",
      "name": "1forge-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "alphachain-adapter:0.0.4",
      "name": "alphachain-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "alphavantage-adapter:0.0.4",
      "name": "alphavantage-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "amberdata-adapter:0.0.4",
      "name": "amberdata-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "amberdata-gasprice-adapter:0.0.4",
      "name": "amberdata-gasprice-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "anyblock-gasprice-adapter:0.0.4",
      "name": "anyblock-gasprice-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "anyblock-uniswap-vwap-adapter:0.0.4",
      "name": "anyblock-uniswap-vwap-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "binance-dex-adapter:0.0.4",
      "name": "binance-dex-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "bitex-adapter:0.0.4",
      "name": "bitex-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "bitso-adapter:0.0.4",
      "name": "bitso-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "blockchain.com-adapter:0.0.4",
      "name": "blockchain.com-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "blockchair-adapter:0.0.4",
      "name": "blockchair-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "blockcypher-adapter:0.0.4",
      "name": "blockcypher-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "blockstream-adapter:0.0.2",
      "name": "blockstream-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "bravenewcoin-adapter:0.0.4",
      "name": "bravenewcoin-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "btc.com-adapter:0.0.2",
      "name": "btc.com-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "cfbenchmarks-adapter:0.0.2",
      "name": "cfbenchmarks-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "coinapi-adapter:0.0.4",
      "name": "coinapi-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "coinbase-adapter:0.0.4",
      "name": "coinbase-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "coincodex-adapter:0.0.4",
      "name": "coincodex-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "coingecko-adapter:0.0.4",
      "name": "coingecko-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "coinlore-adapter:0.0.4",
      "name": "coinlore-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "coinmarketcap-adapter:0.0.5",
      "name": "coinmarketcap-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "coinpaprika-adapter:0.0.3",
      "name": "coinpaprika-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "coinranking-adapter:0.0.4",
      "name": "coinranking-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "covid-tracker-adapter:0.0.4",
      "name": "covid-tracker-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "cryptoapis-adapter:0.0.4",
      "name": "cryptoapis-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "cryptocompare-adapter:0.0.4",
      "name": "cryptocompare-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "cryptoid-adapter:0.0.4",
      "name": "cryptoid-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "cryptomkt-adapter:0.0.4",
      "name": "cryptomkt-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "currencylayer-adapter:0.0.4",
      "name": "currencylayer-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "deribit-adapter:0.0.2",
      "name": "deribit-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "dns-query-adapter:0.0.2",
      "name": "dns-query-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "dwolla-adapter:0.0.1",
      "name": "dwolla-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "dxfeed-adapter:0.0.4",
      "name": "dxfeed-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "dxfeed-secondary-adapter:0.0.2",
      "name": "dxfeed-secondary-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "eodhistoricaldata-adapter:0.0.4",
      "name": "eodhistoricaldata-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "etherchain-adapter:0.0.4",
      "name": "etherchain-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "ethgasstation-adapter:0.0.4",
      "name": "ethgasstation-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "fcsapi-adapter:0.0.4",
      "name": "fcsapi-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "finage-adapter:0.0.4",
      "name": "finage-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "finnhub-adapter:0.0.4",
      "name": "finnhub-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "fixer-adapter:0.0.4",
      "name": "fixer-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "fmpcloud-adapter:0.0.4",
      "name": "fmpcloud-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "genesis-volatility-adapter:0.0.4",
      "name": "genesis-volatility-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "geodb-adapter:0.0.2",
      "name": "geodb-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "iex-cloud-adapter:0.0.2",
      "name": "iex-cloud-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "intrinio-adapter:0.0.1",
      "name": "intrinio-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "json-rpc-adapter:0.0.4",
      "name": "json-rpc-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "kaiko-adapter:0.0.4",
      "name": "kaiko-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "lcx-adapter:0.0.4",
      "name": "lcx-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "linkpool-adapter:0.0.4",
      "name": "linkpool-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "lition-adapter:0.0.4",
      "name": "lition-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "marketstack-adapter:0.0.4",
      "name": "marketstack-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "messari-adapter:0.0.4",
      "name": "messari-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "metalsapi-adapter:0.0.4",
      "name": "metalsapi-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "nikkei-adapter:0.0.4",
      "name": "nikkei-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "nomics-adapter:0.0.4",
      "name": "nomics-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "oilpriceapi-adapter:0.0.4",
      "name": "oilpriceapi-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "onchain-adapter:0.0.4",
      "name": "onchain-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "openexchangerates-adapter:0.0.4",
      "name": "openexchangerates-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "orchid-bandwidth-adapter:0.0.4",
      "name": "orchid-bandwidth-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "paxos-adapter:0.0.2",
      "name": "paxos-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "paypal-adapter:0.0.1",
      "name": "paypal-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "poa-gasprice-adapter:0.0.4",
      "name": "poa-gasprice-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "polygon-adapter:0.0.4",
      "name": "polygon-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "reduce-adapter:0.0.4",
      "name": "reduce-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "renvm-address-set-adapter:0.0.4",
      "name": "renvm-address-set-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "satoshitango-adapter:0.0.4",
      "name": "satoshitango-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "sochain-adapter:0.0.2",
      "name": "sochain-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "stasis-adapter:0.0.4",
      "name": "stasis-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "taapi-adapter:0.0.4",
      "name": "taapi-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "therundown-adapter:0.0.2",
      "name": "therundown-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "tiingo-adapter:0.0.2",
      "name": "tiingo-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "tradermade-adapter:0.0.5",
      "name": "tradermade-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "tradingeconomics-adapter:0.0.4",
      "name": "tradingeconomics-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "trueusd-adapter:0.0.4",
      "name": "trueusd-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "twelvedata-adapter:0.0.1",
      "name": "twelvedata-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "unibit-adapter:0.0.1",
      "name": "unibit-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "wbtc-address-set-adapter:0.0.4",
      "name": "wbtc-address-set-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "xbto-adapter:0.0.4",
      "name": "xbto-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "agoric-adapter:0.0.2",
      "name": "agoric-adapter",
      "type": "targets",
    },
    Object {
      "image_name": "conflux-adapter:0.0.3",
      "name": "conflux-adapter",
      "type": "targets",
    },
    Object {
      "image_name": "dydx-stark-adapter:0.0.2",
      "name": "dydx-stark-adapter",
      "type": "targets",
    },
    Object {
      "image_name": "ethwrite-adapter:0.0.3",
      "name": "ethwrite-adapter",
      "type": "targets",
    },
    Object {
      "image_name": "harmony-adapter:0.0.2",
      "name": "harmony-adapter",
      "type": "targets",
    },
  ],
}
`;

exports[`job matrix generation should generate a job matrix suitable for pushing to ecr 1`] = `
Object {
  "adapter": Array [
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/apy-finance-adapter:EAEE-0.0.3",
      "name": "apy-finance-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/bitcoin-json-rpc-adapter:EAEE-0.0.2",
      "name": "bitcoin-json-rpc-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/crypto-volatility-index-adapter:EAEE-0.0.2",
      "name": "crypto-volatility-index-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/defi-pulse-adapter:EAEE-0.0.4",
      "name": "defi-pulse-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/dns-record-check-adapter:EAEE-0.0.2",
      "name": "dns-record-check-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/market-closure-adapter:EAEE-0.0.4",
      "name": "market-closure-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/outlier-detection-adapter:EAEE-0.0.2",
      "name": "outlier-detection-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/proof-of-reserves-adapter:EAEE-0.0.4",
      "name": "proof-of-reserves-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/reference-transform-adapter:EAEE-0.0.1",
      "name": "reference-transform-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/synth-index-adapter:EAEE-0.0.2",
      "name": "synth-index-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/token-allocation-adapter:EAEE-0.0.2",
      "name": "token-allocation-adapter",
      "type": "composites",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/example-composite-adapter:EAEE-0.0.1",
      "name": "example-composite-adapter",
      "type": "examples",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/example-source-adapter:EAEE-0.0.4",
      "name": "example-source-adapter",
      "type": "examples",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/1forge-adapter:EAEE-0.0.4",
      "name": "1forge-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/alphachain-adapter:EAEE-0.0.4",
      "name": "alphachain-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/alphavantage-adapter:EAEE-0.0.4",
      "name": "alphavantage-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/amberdata-adapter:EAEE-0.0.4",
      "name": "amberdata-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/amberdata-gasprice-adapter:EAEE-0.0.4",
      "name": "amberdata-gasprice-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/anyblock-gasprice-adapter:EAEE-0.0.4",
      "name": "anyblock-gasprice-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/anyblock-uniswap-vwap-adapter:EAEE-0.0.4",
      "name": "anyblock-uniswap-vwap-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/binance-dex-adapter:EAEE-0.0.4",
      "name": "binance-dex-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/bitex-adapter:EAEE-0.0.4",
      "name": "bitex-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/bitso-adapter:EAEE-0.0.4",
      "name": "bitso-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/blockchain.com-adapter:EAEE-0.0.4",
      "name": "blockchain.com-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/blockchair-adapter:EAEE-0.0.4",
      "name": "blockchair-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/blockcypher-adapter:EAEE-0.0.4",
      "name": "blockcypher-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/blockstream-adapter:EAEE-0.0.2",
      "name": "blockstream-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/bravenewcoin-adapter:EAEE-0.0.4",
      "name": "bravenewcoin-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/btc.com-adapter:EAEE-0.0.2",
      "name": "btc.com-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/cfbenchmarks-adapter:EAEE-0.0.2",
      "name": "cfbenchmarks-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/coinapi-adapter:EAEE-0.0.4",
      "name": "coinapi-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/coinbase-adapter:EAEE-0.0.4",
      "name": "coinbase-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/coincodex-adapter:EAEE-0.0.4",
      "name": "coincodex-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/coingecko-adapter:EAEE-0.0.4",
      "name": "coingecko-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/coinlore-adapter:EAEE-0.0.4",
      "name": "coinlore-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/coinmarketcap-adapter:EAEE-0.0.5",
      "name": "coinmarketcap-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/coinpaprika-adapter:EAEE-0.0.3",
      "name": "coinpaprika-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/coinranking-adapter:EAEE-0.0.4",
      "name": "coinranking-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/covid-tracker-adapter:EAEE-0.0.4",
      "name": "covid-tracker-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/cryptoapis-adapter:EAEE-0.0.4",
      "name": "cryptoapis-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/cryptocompare-adapter:EAEE-0.0.4",
      "name": "cryptocompare-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/cryptoid-adapter:EAEE-0.0.4",
      "name": "cryptoid-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/cryptomkt-adapter:EAEE-0.0.4",
      "name": "cryptomkt-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/currencylayer-adapter:EAEE-0.0.4",
      "name": "currencylayer-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/deribit-adapter:EAEE-0.0.2",
      "name": "deribit-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/dns-query-adapter:EAEE-0.0.2",
      "name": "dns-query-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/dwolla-adapter:EAEE-0.0.1",
      "name": "dwolla-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/dxfeed-adapter:EAEE-0.0.4",
      "name": "dxfeed-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/dxfeed-secondary-adapter:EAEE-0.0.2",
      "name": "dxfeed-secondary-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/eodhistoricaldata-adapter:EAEE-0.0.4",
      "name": "eodhistoricaldata-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/etherchain-adapter:EAEE-0.0.4",
      "name": "etherchain-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/ethgasstation-adapter:EAEE-0.0.4",
      "name": "ethgasstation-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/fcsapi-adapter:EAEE-0.0.4",
      "name": "fcsapi-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/finage-adapter:EAEE-0.0.4",
      "name": "finage-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/finnhub-adapter:EAEE-0.0.4",
      "name": "finnhub-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/fixer-adapter:EAEE-0.0.4",
      "name": "fixer-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/fmpcloud-adapter:EAEE-0.0.4",
      "name": "fmpcloud-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/genesis-volatility-adapter:EAEE-0.0.4",
      "name": "genesis-volatility-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/geodb-adapter:EAEE-0.0.2",
      "name": "geodb-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/iex-cloud-adapter:EAEE-0.0.2",
      "name": "iex-cloud-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/intrinio-adapter:EAEE-0.0.1",
      "name": "intrinio-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/json-rpc-adapter:EAEE-0.0.4",
      "name": "json-rpc-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/kaiko-adapter:EAEE-0.0.4",
      "name": "kaiko-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/lcx-adapter:EAEE-0.0.4",
      "name": "lcx-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/linkpool-adapter:EAEE-0.0.4",
      "name": "linkpool-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/lition-adapter:EAEE-0.0.4",
      "name": "lition-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/marketstack-adapter:EAEE-0.0.4",
      "name": "marketstack-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/messari-adapter:EAEE-0.0.4",
      "name": "messari-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/metalsapi-adapter:EAEE-0.0.4",
      "name": "metalsapi-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/nikkei-adapter:EAEE-0.0.4",
      "name": "nikkei-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/nomics-adapter:EAEE-0.0.4",
      "name": "nomics-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/oilpriceapi-adapter:EAEE-0.0.4",
      "name": "oilpriceapi-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/onchain-adapter:EAEE-0.0.4",
      "name": "onchain-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/openexchangerates-adapter:EAEE-0.0.4",
      "name": "openexchangerates-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/orchid-bandwidth-adapter:EAEE-0.0.4",
      "name": "orchid-bandwidth-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/paxos-adapter:EAEE-0.0.2",
      "name": "paxos-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/paypal-adapter:EAEE-0.0.1",
      "name": "paypal-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/poa-gasprice-adapter:EAEE-0.0.4",
      "name": "poa-gasprice-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/polygon-adapter:EAEE-0.0.4",
      "name": "polygon-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/reduce-adapter:EAEE-0.0.4",
      "name": "reduce-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/renvm-address-set-adapter:EAEE-0.0.4",
      "name": "renvm-address-set-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/satoshitango-adapter:EAEE-0.0.4",
      "name": "satoshitango-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/sochain-adapter:EAEE-0.0.2",
      "name": "sochain-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/stasis-adapter:EAEE-0.0.4",
      "name": "stasis-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/taapi-adapter:EAEE-0.0.4",
      "name": "taapi-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/therundown-adapter:EAEE-0.0.2",
      "name": "therundown-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/tiingo-adapter:EAEE-0.0.2",
      "name": "tiingo-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/tradermade-adapter:EAEE-0.0.5",
      "name": "tradermade-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/tradingeconomics-adapter:EAEE-0.0.4",
      "name": "tradingeconomics-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/trueusd-adapter:EAEE-0.0.4",
      "name": "trueusd-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/twelvedata-adapter:EAEE-0.0.1",
      "name": "twelvedata-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/unibit-adapter:EAEE-0.0.1",
      "name": "unibit-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/wbtc-address-set-adapter:EAEE-0.0.4",
      "name": "wbtc-address-set-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/xbto-adapter:EAEE-0.0.4",
      "name": "xbto-adapter",
      "type": "sources",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/agoric-adapter:EAEE-0.0.2",
      "name": "agoric-adapter",
      "type": "targets",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/conflux-adapter:EAEE-0.0.3",
      "name": "conflux-adapter",
      "type": "targets",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/dydx-stark-adapter:EAEE-0.0.2",
      "name": "dydx-stark-adapter",
      "type": "targets",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/ethwrite-adapter:EAEE-0.0.3",
      "name": "ethwrite-adapter",
      "type": "targets",
    },
    Object {
      "image_name": "public.ecr.aws/chainlink-staging/adapters/harmony-adapter:EAEE-0.0.2",
      "name": "harmony-adapter",
      "type": "targets",
    },
  ],
}
`;
